@@ -1,11 +1,13 @@
 v3.4.14
+- Users can now import trainees to Training Sessions using excel spreadsheet
 - Fixed a bug that caused Staff Career tabs not navigating to the correct page
-- User should be able to search for Student/Staff Absences.
+- When accessing Attendance, date will always default to current week and day now
+- Fixed a bug that caused search not working properly in Attendance
 - Added hyperlinks to OpenEMIS ID/Name field in various pages to link to user profile
 - Fixed a bug that caused student import to class successfully when using a class code that is not in the same academic period
 - Implemented the link between Qualification Specializations and Education Subjects
 - Fixed a bug that caused sorting to refresh advanced search results
-- 
+- Fixed a bug that caused 404 error page when access Administration -> Administrative Boundaries
 
 v3.4.13
 - Class column in Institutions -> Students can be sortable now
